Introduce seed field and model metadata

--- a/desktop/fonts/kiroshi-icons.toml
+++ b/desktop/fonts/kiroshi-icons.toml
@@ -4,3 +4,4 @@ module = "icon"
 checkmark = "fontawesome-ok"
 hidden = "fontawesome-eye-off"
 visible = "fontawesome-eye"
+refresh = "entypo-arrows-ccw"
