--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = ["desktop"]
 kiroshi = { path = "." }
 
 bytes = "1"
+dirs = "6"
 futures = "0.3"
 iced = { git = "https://github.com/iced-rs/iced.git", rev = "75a6f32a5ef49bb8e6d16506d84b07822a33c41b" }
 num-traits = "0.2"
@@ -19,13 +20,16 @@ rand = "0.8"
 serde = "1"
 serde_json = "1"
 tokio = "1"
+toml = "0.8"
 
 [dependencies]
 bytes.workspace = true
+dirs.workspace = true
 futures.workspace = true
 num-traits.workspace = true
 rand.workspace = true
 serde_json.workspace = true
+toml.workspace = true
 
 serde.workspace = true
 serde.features = ["derive"]
