--- a/desktop/Cargo.toml
+++ b/desktop/Cargo.toml
@@ -8,7 +8,7 @@ kiroshi.workspace = true
 num-traits.workspace = true
 
 iced.workspace = true
-iced.features = ["tokio", "image", "web-colors"]
+iced.features = ["tokio", "image", "canvas", "web-colors"]
 
 tokio.workspace = true
 tokio.features = ["fs"]
