--- a/desktop/fonts/kiroshi-icons.toml
+++ b/desktop/fonts/kiroshi-icons.toml
@@ -1,7 +1,9 @@
 module = "icon"
 
 [glyphs]
+brush = "fontawesome-brush"
 checkmark = "fontawesome-ok"
+cubes = "fontawesome-cubes"
 hidden = "fontawesome-eye-off"
-visible = "fontawesome-eye"
 refresh = "entypo-arrows-ccw"
+visible = "fontawesome-eye"
