--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,6 @@
 absl-py==2.1.0
 accelerate==0.30.0
-adetailer @ git+https://github.com/Bing-su/adetailer.git@25e7509fe018de8aa063a5f1902598f5eda0c06c
+adetailer @ git+https://github.com/hecrj/adetailer.git@25e7509fe018de8aa063a5f1902598f5eda0c06c
 annotated-types==0.7.0
 attrs==24.1.0
 certifi==2024.2.2
@@ -34,14 +34,14 @@ nvidia-cublas-cu12==12.8.3.14
 nvidia-cuda-cupti-cu12==12.8.57
 nvidia-cuda-nvrtc-cu12==12.8.61
 nvidia-cuda-runtime-cu12==12.8.57
-nvidia-cudnn-cu12==9.7.1.26
+nvidia-cudnn-cu12==9.8.0.87
 nvidia-cufft-cu12==11.3.3.41
 nvidia-cufile-cu12==1.13.0.11
 nvidia-curand-cu12==10.3.9.55
 nvidia-cusolver-cu12==11.7.2.55
 nvidia-cusparse-cu12==12.5.7.53
 nvidia-cusparselt-cu12==0.6.3
-nvidia-nccl-cu12==2.25.1
+nvidia-nccl-cu12==2.26.5
 nvidia-nvjitlink-cu12==12.8.61
 nvidia-nvtx-cu12==12.8.55
 opencv-contrib-python==4.10.0.84
@@ -60,10 +60,10 @@ pydantic_core==2.20.1
 Pygments==2.18.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-pytorch-triton==3.2.0+git4b3bb1f8
+pytorch-triton==3.3.0+git96316ce5
 pytz==2024.1
 PyYAML==6.0.1
-RealESRGAN @ git+https://github.com/sberbank-ai/Real-ESRGAN.git@362a0316878f41dbdfbb23657b450c3353de5acf
+RealESRGAN @ git+https://github.com/hecrj/RealESRGAN.git@195df05862c92a3ad3497bcab8bbb4cef366d3af
 regex==2024.4.28
 requests==2.31.0
 rich==13.7.1
@@ -74,8 +74,8 @@ six==1.16.0
 sounddevice==0.4.7
 sympy==1.13.3
 tokenizers==0.19.1
-torch==2.7.0.dev20250308+cu128
-torchvision==0.22.0.dev20250308+cu128
+torch==2.8.0.dev20250514+cu128
+torchvision==0.22.0.dev20250514+cu128
 tqdm==4.66.4
 transformers==4.40.1
 triton==2.3.0
